Revert "SSCSCI-2658 (#5375)"
This reverts commit 77baf97c0cf5a00e9f8d2cd8b8034e37bca28611.